--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,11 +3,11 @@
 
 <% if(locals.homeContent){ %>
 <p><%= homeContent%></p>
-<% } %> 
+<% } %>
 <% if(locals.posts){ %> 
-    <% for(var i = 0; i < posts.length; i++){%>
-        <p><%= posts[i].title%>: <%= posts[i].body%></p>
-        
-
-    <% } %> 
-<% } %> <%- include("partials/footer.ejs") %>
+    <% posts.forEach(function(post){%>
+        <h1><%= post.title%></h1>
+        <p> <%= post.body%></p>
+    <% }) %> 
+<% } %> 
+<%- include("partials/footer.ejs") %>
