--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,12 +2,14 @@
 <h1>Home</h1>
 
 <% if(locals.homeContent){ %>
-<p><%= homeContent%></p>
+    <p><%= homeContent%></p>
 <% } %>
-<% if(locals.posts){ %> 
+<% if(locals.posts){ %>
     <% posts.forEach(function(post){%>
         <h1><%= post.title%></h1>
-        <p> <%= post.body%></p>
+        <% var body = post.body%>
+        <% var subBody = body.substring(0, 100) + "..."; %>
+        <p><%= subBody %><p>
     <% }) %> 
-<% } %> 
+<% } %>
 <%- include("partials/footer.ejs") %>
