--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,4 @@
+<%- include("header.ejs") %>
 <h1>Home</h1>
 
 <% if(locals.homeContent){ %>
@@ -7,3 +8,4 @@
 <% } if(locals.contactContent){ %>
     <p><%=contactContent %></p>
 <% } %>
+<%- include("footer.ejs") %>
