--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,25 @@
 <%- include("partials/header.ejs") %>
 <h1>Compose</h1>
 <form action="/" method="post">
-    <input type="text" name="newPost">
-    <input type="submit" value="Publish">
+  <div class="form-group">
+    <label for="postTitle">Title</label>
+    <input
+      type="text"
+      class="form-control"
+      name="postTitle"
+      placeholder="Enter name of Blog"
+    />
+  </div>
+  <div class="form-group">
+    <label for="postBody">Post</label>
+    <textarea
+      class="form-control"
+      name="postBody"
+      placeholder="Enter details of blog"
+    ></textarea>
+  </div>
+  <div class="form-group">
+    <input class="btn btn-primary" type="submit" value="Publish" />
+  </div>
 </form>
 <%- include("partials/footer.ejs") %>
