--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,12 @@
 <h1>Home</h1>
 
 <% if(locals.homeContent){ %>
-    <p><%= homeContent%></p> 
-<% } %>
-<%- include("partials/footer.ejs") %>
+<p><%= homeContent%></p>
+<% } %> 
+<% if(locals.posts){ %> 
+    <% for(var i = 0; i < posts.length; i++){%>
+        <p><%= posts[i].title%>: <%= posts[i].body%></p>
+        
+
+    <% } %> 
+<% } %> <%- include("partials/footer.ejs") %>
