--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
         <h1><%= post.title%></h1>
         <% var body = post.body%>
         <% var subBody = body.substring(0, 100) + "..."; %>
-        <p><%= subBody %><a href="/posts/<%= post.title %>">Read More</a><p>
+        <p><%= subBody %><a href="/posts/<%= post.title %>">Read More</a></p>
         
     <% }) %> 
 <% } %>
