--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 <% if(locals.post){ %>
     <h1><%= post.title %></h1>
-    <p><%= post.body %>/p>
+    <p><%= post.body %></p>
 <% } %>
 <%- include("partials/footer.ejs") %>   
